# PICSL_MALF

./: CMakeLists.txt  README  cmake_install.cmake
CorrectiveLearning/: segAdapter.cxx
CorrectiveLearning/demo/: .README.swp  README  rundemo.sh
CorrectiveLearning/demo/ADNI3T/CV01/: testAutoListL  testAutoListR  testManualListL  testManualListR  trainAutoListL  trainAutoListR  trainManualListL  trainManualListR
CorrectiveLearning/demo/ADNI3T/CV02/: testAutoListL  testAutoListR  testManualListL  testManualListR  trainAutoListL  trainAutoListR  trainManualListL  trainManualListR
CorrectiveLearning/demo/ADNI3T/CV03/: testAutoListL  testAutoListR  testManualListL  testManualListR  trainAutoListL  trainAutoListR  trainManualListL  trainManualListR
CorrectiveLearning/demo/ADNI3T/CV04/: testAutoListL  testAutoListR  testManualListL  testManualListR  trainAutoListL  trainAutoListR  trainManualListL  trainManualListR
CorrectiveLearning/demo/ADNI3T/CV05/: testAutoListL  testAutoListR  testManualListL  testManualListR  trainAutoListL  trainAutoListR  trainManualListL  trainManualListR
JointFusion/: LabelFusion.cxx  WeightedVotingLabelFusionImageFilter.h  WeightedVotingLabelFusionImageFilter.txx
